--- a/tasks/services.yml
+++ b/tasks/services.yml
@@ -1,6 +1,7 @@
 ---
 - name: Start nginx
   tags: [deloy]
+  become: true
   service:
     name: nginx
     state: started
@@ -10,6 +11,7 @@
 
 - name: Start docker
   tags: [deloy]
+  become: true
   service:
     name: docker
     state: started
