--- a/tasks/deploy.yml
+++ b/tasks/deploy.yml
@@ -1,18 +1,9 @@
 ---
-
-- name: Create mastodon directory
-  become: true
-  file:
-    path: "{{ deploy_dir }}"
-    state: directory
-
 - name: Deploy docker compose
   become: true
   template:
     dest: "{{ deploy_dir }}/docker-compose.yml"
     src: docker-compose.yml
-    owner: root
-    group: root
     mode: 0644
 
 - name: Deploy env file
@@ -20,32 +11,27 @@
   template:
     dest: "{{ deploy_dir }}/.env.production"
     src: .env.production.j2
-    owner: root
-    group: root
     mode: 0644
+
+- name: Deploy initial user creator
+  become: true
+  template:
+    dest: "{{ deploy_dir }}/user_setup.sh"
+    src: user_setup.sh.j2
+    mode: 0755
 
 - name: Create and start services
   become: true
   community.docker.docker_compose:
     project_src: "{{ deploy_dir }}"
 
+- name: Copy ait user setup
+  shell:
+    cmd: "docker cp {{ deploy_dir }}/user_setup.sh mastodon:/opt/pleroma"
+
 - name: Create ait user
   become: true
   community.docker.docker_container_exec:
     container: mastodon
-    command: "/mastodon/bin/tootctl accounts create ait --email {{ admin_user }} --confirmed --role admin"
-    chdir: "/mastodon"
-  register: tootctl_result
-
-- set_fact:
-    admin_password: "{{ tootctl_result.stdout }}" # | regex_search('New password: ([^\s]+)') }}"
-
-- name: Deploy docker compose
-  become: true
-  template:
-    dest: "{{ deploy_dir }}/masto_bot.py"
-    src: masto_bot.py
-    owner: root
-    group: root
-    mode: 0755
+    command: "./user_setup.sh"
 
