--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -1,57 +1,38 @@
 version: '3'
 
 volumes:
-  mastodon:
+  uploads:
+  static:
   postgres:
-  redis:
 
 networks:
-  http_network:
-    external: true
-
-  mastodon_network:
-    external: false
-    internal: true
+  mastodon:
 
 services:
   mastodon:
-    image: ghcr.io/wonderfall/mastodon
+    image: jordemort/pleroma
     container_name: mastodon
     restart: unless-stopped
     env_file: .env.production
-    expose:
-      - "3000"
-      - "4000"
+    ports:
+      - 127.0.0.1:4000:4000
     depends_on:
-      - db
-      - redis
+      - postgres
     volumes:
-      - mastodon:/mastodon/public/system
+      - ./config:/etc/pleroma
+      - uploads:/var/lib/pleroma/uploads
+      - static:/var/lib/pleroma/static
     networks:
-      - mastodon_network
-      - http_network
+      - mastodon
 
-  db:
+  postgres:
     restart: always
-    image: postgres:9.6-alpine
-    container_name: db
+    image: postgres:13-alpine
+    container_name: postgres
     env_file: .env.production
     expose:
       - "5432"
     volumes:
       - postgres:/var/lib/postgresql/data
     networks:
-      - mastodon_network
-
-  redis:
-    restart: always
-    image: redis:alpine
-    container_name: redis
-    expose:
-      - "6379"
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-    volumes:
-      - redis:/data
-    networks:
-      - mastodon_network
+      - mastodon
