--- a/tasks/setup.yml
+++ b/tasks/setup.yml
@@ -27,17 +27,15 @@
   file:
     path: "{{ item }}"
     state: directory
-  loop: ["{{ deploy_dir }}", "{{ deploy_dir }}/masto_bot", "{{ deploy_dir }}/media", "{{ deploy_dir }}/config"]
+  loop: ["{{ deploy_dir }}", "{{ deploy_dir }}/config", "{{ deploy_dir }}/media"]
 
-- name: Create mastobot config
+- name: Deploy media
+  become: true
   copy:
-    dest: /etc/mastobot_config.yaml
-    mode: 0644
-    content: |
-      server_name: {{ server_name }}
-      mediapath: {{ deploy_dir }}/media
+    src: bootstrap_media/
+    dest: "{{ deploy_dir }}/media/"
 
-- name: Create mastobot config
+- name: Write pleroma config
   template:
     dest: "{{ deploy_dir }}/config/config.exs"
     src: config.exs.j2
