--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,7 +8,7 @@ apt_packages:
 admin_user: ait@cyberrange.at
 admin_password: "password"
 deploy_dir: /opt/mastodon
-ca_cert: "/etc/ssl/mastodon.crt"
+ssl_ca: "/etc/ssl/mastodon.crt"
 ssl_cert: "/etc/ssl/mastodon.crt"
 ssl_key: "/etc/ssl/mastodon.key"
 instance_name: "KSÖ Planspiel"
