--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,7 +11,7 @@ deploy_dir: /opt/mastodon
 ssl_ca: "/etc/ssl/mastodon.crt"
 ssl_cert: "/etc/ssl/mastodon.crt"
 ssl_key: "/etc/ssl/mastodon.key"
-instance_name: "KSÖ Planspiel"
+instance_name: "AIT Mastodon"
 global_mail_server: "127.0.0.1"
 use_soapbox: false
 mastodon_users:
