scope variable with role

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,7 +7,7 @@ apt_packages:
   - python3-pip
 admin_user: ait@cyberrange.at
 admin_password: "password"
-deploy_dir: /opt/mastodon
+mastodon_deploy_dir: /opt/mastodon
 ssl_ca: "/etc/ssl/mastodon.crt"
 ssl_cert: "/etc/ssl/mastodon.crt"
 ssl_key: "/etc/ssl/mastodon.key"
