--- a/tasks/toots.yml
+++ b/tasks/toots.yml
@@ -2,7 +2,7 @@
 - name: Create toots directory
   become: true
   file:
-    path: "{{ deploy_dir }}/toots"
+    path: "{{ mastodon_deploy_dir }}/toots"
     state: directory
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
@@ -10,7 +10,7 @@
 - name: Deploy docker compose
   become: true
   template:
-    dest: "{{ deploy_dir }}/toots/{{ item.toot_id }}"
+    dest: "{{ mastodon_deploy_dir }}/toots/{{ item.toot_id }}"
     src: toot_template.sh.j2
     mode: 0755
   with_items: "{{ mastodon_prepared_toots }}"
